@@ -1,0 +1,57 @@
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<prefab>
+  <property name="CopyAirBlocks" value="True" />
+  <property name="ExcludeDistantPOIMesh" value="False" />
+  <property name="ExcludePOICulling" value="False" />
+  <property name="DistantPOIYOffset" value="0" />
+  <property name="AllowTopSoilDecorations" value="False" />
+  <property name="DifficultyTier" value="0" />
+  <property name="ShowQuestClearCount" value="1" />
+  <property name="TraderArea" value="False" />
+  <property name="POIMarkerSize" value="1, 3, 3#1, 3, 3" />
+  <property name="POIMarkerStart" value="-1, 13, 18#25, 4, 9" />
+  <property name="POIMarkerGroup" value="cave,cave" />
+  <property name="POIMarkerTags" value="cavenode#cavenode" />
+  <property name="POIMarkerType" value="None,None" />
+  <property name="POIMarkerPartToSpawn" value="," />
+  <property name="POIMarkerPartRotations" value="1,3" />
+  <property name="POIMarkerPartSpawnChance" value="1,1" />
+  <property name="PrefabSize" value="25, 20, 25" />
+  <property name="RotationToFaceNorth" value="2" />
+  <property name="Zoning" value="none" />
+  <property name="EditorGroups" value="cave" />
+  <property name="Tags" value="cave, underground" />
+  <property name="DuplicateRepeatDistance" value="2000" />
+  <property class="Stats">
+    <property name="TotalVertices" value="18566" />
+    <property name="TotalTriangles" value="13110" />
+    <property class="BlockEntities">
+      <property name="Vertices" value="9760" />
+      <property name="Triangles" value="3246" />
+    </property>
+    <property class="ChunkMeshes0">
+      <property name="Vertices" value="3904" />
+      <property name="Triangles" value="1952" />
+    </property>
+    <property class="ChunkMeshes1">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes2">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes3">
+      <property name="Vertices" value="264" />
+      <property name="Triangles" value="132" />
+    </property>
+    <property class="ChunkMeshes4">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes5">
+      <property name="Vertices" value="4638" />
+      <property name="Triangles" value="7780" />
+    </property>
+  </property>
+</prefab>
